[package]
name = "bigquery_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
anyhow = "1.0.70"
futures = "0.3.28"
futures-util = "0.3.28"
gcp-bigquery-client = "0.16.6"
log = "0.4.17"
log4rs = "1.2.0"
serde_json = "1.0.95"
